Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20842

XmlListModel crashes when using PropertyChanges, to change data source to xml property

    XMLWordPrintable

Details

    • d3599ab224f00915045562562c7fd4d6b9b9aeb4

    Description

      Using the attached .qml, qmlviewer/qmlscene will segfault on a click (outside of the list).
      The effect of a click is to set the current state to "xmlstring", in which:

      PropertyChanges { target: xmllistmodelelement; xml: modelxml }
      

      where modelxml is a string of xml data.

      Performing the same change outside of a state (e.g. onClicked:

      { xmllistmodelelement.xml = modelxml }

      ) works ok.

      Backtrace:

      Program received signal SIGSEGV, Segmentation fault.
      0xb63e7a86 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=0x4)
          at ../../include/QtCore/../../../../../depot/qt/4.7/src/corelib/tools/qscopedpointer.h:135
      135             return d;
      (gdb) bt
      #0  0xb63e7a86 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=0x4)
          at ../../include/QtCore/../../../../../depot/qt/4.7/src/corelib/tools/qscopedpointer.h:135
      #1  0xb6439def in qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > > (p=...)
          at ../../include/QtCore/../../../../../depot/qt/4.7/src/corelib/global/qglobal.h:2341
      #2  0xb6439e06 in QNetworkReply::d_func (this=0x0) at /home/user/depot/qt/4.7/src/network/access/qnetworkreply.h:172
      #3  0xb6439978 in QNetworkReply::attribute (this=0x0, code=QNetworkRequest::RedirectionTargetAttribute)
          at /home/user/depot/qt/4.7/src/network/access/qnetworkreply.cpp:572
      #4  0xb7ca411a in QDeclarativeXmlListModel::requestFinished (this=0x821b438)
          at /home/user/depot/qt/4.7/src/declarative/util/qdeclarativexmllistmodel.cpp:927
      #5  0xb7e967fb in QDeclarativeXmlListModel::qt_metacall (this=0x821b438, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfffea58)
          at .moc/debug-shared/moc_qdeclarativexmllistmodel_p.cpp:149
      #6  0xb6229bd2 in QMetaObject::metacall (object=0x821b438, cl=QMetaObject::InvokeMetaMethod, idx=16, argv=0xbfffea58)
          at /home/user/depot/qt/4.7/src/corelib/kernel/qmetaobject.cpp:237
      #7  0xb623ee23 in QMetaObject::activate (sender=0x8232680, m=0xb651e44c, local_signal_index=1, argv=0x0)
          at /home/user/depot/qt/4.7/src/corelib/kernel/qobject.cpp:3278
      #8  0xb64b0265 in QNetworkReply::finished (this=0x8232680) at .moc/debug-shared/moc_qnetworkreply.cpp:152
      #9  0xb64b0121 in QNetworkReply::qt_metacall (this=0x8232680, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x8251b58)
          at .moc/debug-shared/moc_qnetworkreply.cpp:130
      #10 0xb64134d0 in QFileNetworkReply::qt_metacall (this=0x8232680, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x8251b58)
          at .moc/debug-shared/moc_qfilenetworkreply_p.cpp:64
      #11 0xb6229bd2 in QMetaObject::metacall (object=0x8232680, cl=QMetaObject::InvokeMetaMethod, idx=9, argv=0x8251b58)
          at /home/user/depot/qt/4.7/src/corelib/kernel/qmetaobject.cpp:237
      #12 0xb6238dc3 in QMetaCallEvent::placeMetaCall (this=0x8251b78, object=0x8232680) at /home/user/depot/qt/4.7/src/corelib/kernel/qobject.cpp:535
      #13 0xb623ae69 in QObject::event (this=0x8232680, e=0x8251b78) at /home/user/depot/qt/4.7/src/corelib/kernel/qobject.cpp:1217
      #14 0xb66d1964 in QApplicationPrivate::notify_helper (this=0x80be240, receiver=0x8232680, e=0x8251b78)
          at /home/user/depot/qt/4.7/src/gui/kernel/qapplication.cpp:4481
      #15 0xb66cf1f2 in QApplication::notify (this=0xbffff3e4, receiver=0x8232680, e=0x8251b78) at /home/user/depot/qt/4.7/src/gui/kernel/qapplication.cpp:3881
      #16 0xb6221c57 in QCoreApplication::notifyInternal (this=0xbffff3e4, receiver=0x8232680, event=0x8251b78)
          at /home/user/depot/qt/4.7/src/corelib/kernel/qcoreapplication.cpp:787
      #17 0x0806ebaf in QCoreApplication::sendEvent (receiver=0x8232680, event=0x8251b78)
          at ../../include/QtCore/../../../../../depot/qt/4.7/src/corelib/kernel/qcoreapplication.h:215
      #18 0xb6222d21 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80bdba0)
          at /home/user/depot/qt/4.7/src/corelib/kernel/qcoreapplication.cpp:1428
      #19 0xb62229d9 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/user/depot/qt/4.7/src/corelib/kernel/qcoreapplication.cpp:1321
      #20 0xb67a2c4a in QCoreApplication::sendPostedEvents () at ../../include/QtCore/../../../../../depot/qt/4.7/src/corelib/kernel/qcoreapplication.h:220
      #21 0xb625aba0 in postEventSourceDispatch (s=0x80c3d10) at /home/user/depot/qt/4.7/src/corelib/kernel/qeventdispatcher_glib.cpp:277
      #22 0xb59e15e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
      #23 0xb59e52d8 in ?? () from /lib/libglib-2.0.so.0
      #24 0xb59e54b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
      #25 0xb625bc18 in QEventDispatcherGlib::processEvents (this=0x80c19c0, flags=...)
          at /home/user/depot/qt/4.7/src/corelib/kernel/qeventdispatcher_glib.cpp:422
      #26 0xb67af3c2 in QGuiEventDispatcherGlib::processEvents (this=0x80c19c0, flags=...)
          at /home/user/depot/qt/4.7/src/gui/kernel/qguieventdispatcher_glib.cpp:204
      #27 0xb621f017 in QEventLoop::processEvents (this=0xbffff34c, flags=...) at /home/user/depot/qt/4.7/src/corelib/kernel/qeventloop.cpp:149
      #28 0xb621f15c in QEventLoop::exec (this=0xbffff34c, flags=...) at /home/user/depot/qt/4.7/src/corelib/kernel/qeventloop.cpp:201
      #29 0xb6222349 in QCoreApplication::exec () at /home/user/depot/qt/4.7/src/corelib/kernel/qcoreapplication.cpp:1064
      #30 0xb66cee48 in QApplication::exec () at /home/user/depot/qt/4.7/src/gui/kernel/qapplication.cpp:3755
      #31 0x080757a0 in main (argc=2, argv=0xbffff514) at /home/user/depot/qt/4.7/tools/qml/main.cpp:594
      

      Attachments

        For Gerrit Dashboard: QTBUG-20842
        # Subject Branch Project Status CR V

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes