Always disconnect signals on aborted reply objects

reload() did not disconnect the model from an aborted reply's
signals, and if it received a finished() signal from the aborted
reply it crashed when trying to access the deleted d->reply.

Task-number: QTBUG-20842